--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "ext-json": "*",
         "pimple/pimple": "*",
         "hughcube/guzzle-http": "*",
-        "hughcube/laravel-service-support": "*"
+        "hughcube/laravel-service-support": "^1.0"
     },
     "require-dev": {
         "laravel/framework": "*",
